--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,9 @@ spring:
       filter:
         enabled: true
 
+springdoc:
+  default-produces-media-type: application/json
+
 logging:
   level:
     org.hibernate.orm.jdbc.bind: TRACE
